--- a/starbuzz/lounge/lounge.css
+++ b/starbuzz/lounge/lounge.css
@@ -1,5 +1,4 @@
 h1,h2{
-    font-family: sans-serif;
     color: gray;
 }
 
@@ -7,7 +6,11 @@ h1{
     border-bottom: 1px solid black;
 }
 
+body{
+    font-family: sans-serif;
+}
+
 p{
     color: maroon;
-    font-family: sans-serif;
+    
 }
