--- a/starbuzz/lounge/lounge.css
+++ b/starbuzz/lounge/lounge.css
@@ -14,3 +14,15 @@ p{
     color: maroon;
     
 }
+
+p.greentea{
+    color:green;
+}
+
+p.raspberry{
+    color: blue;
+}
+
+p.blueberry{
+    color: purple;
+}
