--- a/starbuzz/lounge/lounge.css
+++ b/starbuzz/lounge/lounge.css
@@ -1,28 +1,16 @@
-h1,h2{
-    color: gray;
-}
-
-h1{
-    border-bottom: 1px solid black;
-}
-
 body{
-    font-family: sans-serif;
+    font-size: small;
+    font-family: Verdana, Helvetica, Arial, sans-serif;
+    line-height: 1.6em;
 }
 
-p{
-    color: maroon;
-    
+h1,h2{
+    color: #007e7e
+}
+h1{
+    font-size: 150%;
 }
 
-p.greentea{
-    color:green;
-}
-
-p.raspberry{
-    color: blue;
-}
-
-p.blueberry{
-    color: purple;
+h2{
+    font-size: 130%;
 }
