--- a/starbuzz/starbuzz.css
+++ b/starbuzz/starbuzz.css
@@ -5,13 +5,15 @@ body {
     margin:           0px;
   }
   
-  header {
+  header.top {
     background-color: #675c47;
     margin:           10px 10px 0px 10px;
     height:           108px;
   }
+
   
-  section#main {
+  
+  section#main, section#blog {
     display: table-cell;
     background:       #efe5d0 url(images/background.gif) top left;
     font-size:        105%;
@@ -84,9 +86,35 @@ body {
       vertical-align: top;
   }
 
-   headerSlogan{
-       float: right;
-   }
+  #headerSlogan {
+	float: right;
+}
+
+nav{
+    background-color: #efe5d0;
+    margin: 10px 10px 0px 10px;
+}
    
+nav ul{
+    background-color: #efe5d0;
+    margin: 0px;
+    list-style-type: none;
+    padding: 5px 0px 5px 0px;
+}
+
+nav ul li{
+    display: inline;
+    padding: 5px 10px 5px 10px;
+}
+
+nav ul li a:link, ul li a:visited{
+    color: #954b4b;
+    border-bottom: none;
+    font-weight: bold;
+}
+
+nav ul li.selected{
+    background-color: #c8b99c;
+}
    
   
